# AgentHarvest

./: .gitignore  ANTI_DETECTION.md  DUPLICATE_PREVENTION.md  INTELLIGENT_BATCHING.md  PRODUCTION_GUIDE.md  README.md  SAFEGUARDS.md  UI_GUIDE.md  app.py  production_config.py  pyproject.toml  requirements-ui.txt  requirements.txt  run_production.py  scrape_safe_continuous.py
agentharvest/: __init__.py  utils.py
agentharvest/core/scrapers/: __init__.py  models.py
agentharvest/core/scrapers/zillow/: __init__.py  browser.py  history.py  parsers.py  processors.py  queries.py
docs/: IMPLEMENTATION_SUMMARY.md  zillow_api.md  zillow_api_findings.md
examples/: search_agents.py
realtor_scraper/realtor_scraper/: middlewares.py  settings.py
realtor_scraper/realtor_scraper/spiders/: agents_spider.py
research/: agent_directory_data.json  api_calls.json  api_discovery_guide.md  next_data.json  playwright_api_capture.py  zillow_page.html  zillow_scraper_test.py  zillow_test.py
