[tool.poetry]
name = "agentharvest"
version = "1.0.0"
description = "Zillow real estate agent scraper"
authors = ["Yevgeniy Matsay"]
homepage = "https://github.com/yevgeniymatsay1/AgentHarvest"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
requests = "^2.32.4"
pandas = "^2.3.1"
pydantic = "^2.11.7"
tenacity = "^9.1.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
