[tool.poetry]
name = "realtor-scraper"
version = "0.1.0"
description = "Scrapy-based crawler for Realtor.com agent profiles"
authors = ["AgentHarvest Maintainers"]
homepage = "https://github.com/yevgeniymatsay1/AgentHarvest"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
scrapy = "^2.13.4"
scrapy-playwright = "^0.0.39"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
